#4 - tidying details in preparation for automated releases.