@@ -1,5 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.littlegrid</groupId>
@@ -25,11 +26,9 @@
     </licenses>
 
     <scm>
-        <connection>scm:git:https://littlegrid@bitbucket.org/littlegrid/littlegrid-coherence-testsupport.git
-        </connection>
-        <developerConnection>scm:git:https://littlegrid@bitbucket.org/littlegrid/littlegrid-coherence-testsupport.git
-        </developerConnection>
-        <url>git:https://littlegrid@bitbucket.org/littlegrid/littlegrid-coherence-testsupport.git</url>
+        <connection>scm:git:https://littlegrid@github.com/littlegrid/littlegrid-coherence-testsupport.git</connection>
+        <developerConnection>scm:git:https://littlegrid@github.com/littlegrid/littlegrid-coherence-testsupport.git</developerConnection>
+        <url>git:https://littlegrid@github.com/littlegrid/littlegrid-coherence-testsupport.git</url>
     </scm>
 
     <developers>
@@ -121,8 +120,8 @@
                 <artifactId>cobertura-maven-plugin</artifactId>
                 <version>${cobertura-maven-plugin.version}</version>
                 <configuration>
-                    <instrumentation />
-                    <check />
+                    <instrumentation/>
+                    <check/>
                     <formats>
                         <format>xml</format>
                         <format>html</format>
@@ -240,8 +239,7 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
                             <forkMode>always</forkMode>
-                            <!--<argLine>-Xmx768m -Xms768m -XX:MaxPermSize=384m ${argLine}</argLine>-->
-                            <argLine>-Xmx768m -Xms768m -XX:MaxPermSize=384m ${argLine}</argLine>
+                            <argLine>-Xmx768m -Xms768m ${argLine}</argLine>
                             <!--
                                 If using this custom argLine profile (typically to support command-line override),
                                 then in additional to your own user specified settings you should also include
